gccida/g0/print_int_cst_octal
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_int_cst_octal/src/dbxout.c:2195:18: error: expected expression
low = *( _OWORD *)&c->block.vars; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_int_cst_octal/src/dbxout.c:2195:10: error: use of undeclared identifier '_OWORD'
low = *( _OWORD *)&c->block.vars; 
         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_int_cst_octal/src/obj/dbxout.o] Error 1
